--- a/LinkedListGame.css
+++ b/LinkedListGame.css
@@ -116,6 +116,7 @@ p {
     
 }
 .wrapper2 {
+    background-color: #e5e3e6;
     display: grid;
     width: 100%;
     /*grid-template-columns: repeat(, 1fr); */
@@ -126,7 +127,10 @@ p {
 }
 
 .NODE {
+    background-color: white;
     box-shadow: 1px -1px 5px grey;
+    border-top-right-radius: 20%;
+    border-bottom-left-radius: 20%;
 }
 
 i {
@@ -201,7 +205,7 @@ h3, h2 {
 
 .dropzone {
    
-   height: 200px;
+   height: 150px;
     
 }
 
